# fastapi-project

./: .gitignore  README.md  main.py  model.py  pyproject.toml  requirements.txt  sample.py  vercel.json
app/: main.py  vercel.json
json/: traffic.json
src/: main.py
