[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["shilik <ltshieh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires =["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
