[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["shilik <ltshieh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
google-generativeai = "^0.2.0"
autopep8 = "^2.0.4"
pydantic = "^2.3.0"
mecab-python3 = "^1.0.8"
unidic-lite = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
